<resources>
    <string name="app_name">JokenPo</string>
    <string name="title">Jokenpô</string>
    <string name="your_choice">Sua escolha: </string>
    <string name="cpu_choice">Escolha CPU: </string>
    <string name="players_in_game">Você X CPU</string>
    <string name="new_turn">Nova Partida</string>

    <string name="rock">Pedra</string>
    <string name="paper">Papel</string>
    <string name="scissors">Tesoura</string>

    <string name="choose_movement">Escolha um movimento!</string>
    <string name="draw">Empate!</string>
    <string name="you_won">Você venceu!</string>
    <string name="cpu_won">CPU venceu!</string>
    <string name="game_reset">Jogo reiniciado!</string>
</resources>
